@@ -5,12 +5,16 @@ import static de.codecentric.hc.gateway.security.ApplicationUser.Role.USER;
 
 import de.codecentric.hc.gateway.security.GatewayAuthConfig.GatewayAuthType;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.AllArgsConstructor;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.authority.mapping.GrantedAuthoritiesMapper;
 import org.springframework.security.core.userdetails.MapReactiveUserDetailsService;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -20,6 +24,7 @@ import org.springframework.security.web.server.SecurityWebFilterChain;
 
 @AllArgsConstructor
 @EnableWebFluxSecurity
+@Configuration
 public class SecurityConfig {
 
   private GatewayAuthConfig authConfig;
@@ -43,17 +48,18 @@ public class SecurityConfig {
                         .password(passwordEncoder().encode(username))
                         .roles(USER)
                         .build())
-            .collect(Collectors.toList()));
+            .toList());
     return new MapReactiveUserDetailsService(users);
   }
 
   @Bean
-  public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http) {
+  public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http)
+      throws Exception {
     configureAuthorization(http);
     return http.build();
   }
 
-  private void configureAuthorization(ServerHttpSecurity http) {
+  private void configureAuthorization(ServerHttpSecurity http) throws Exception {
     if (GatewayAuthType.OAUTH_2_LOGIN.equals(authConfig.getType())) {
       commonConfig(http).oauth2Login();
     } else {
@@ -61,33 +67,40 @@ public class SecurityConfig {
     }
   }
 
-  private ServerHttpSecurity commonConfig(ServerHttpSecurity http) {
+  private ServerHttpSecurity commonConfig(ServerHttpSecurity http) throws Exception {
     return http.csrf()
         .disable()
-        .authorizeExchange()
-        .pathMatchers("/actuator/health/**")
-        .permitAll()
-        .pathMatchers("/actuator/**")
-        .hasRole(MONITORING)
-        .pathMatchers("/favicon.ico")
-        .permitAll()
-        .pathMatchers("/habits/**")
-        .hasRole(USER)
-        .pathMatchers("/track/**")
-        .hasRole(USER)
-        .pathMatchers("/report/**")
-        .hasRole(USER)
-        .pathMatchers("/ui/overview")
-        .hasRole(USER)
-        .pathMatchers("/ui/**")
-        .permitAll()
-        .pathMatchers("/")
-        .permitAll()
-        .and();
+        .authorizeExchange(
+            (authorize) ->
+                authorize
+                    .pathMatchers("/actuator/health/**")
+                    .permitAll()
+                    .pathMatchers("/actuator/**")
+                    .hasRole(MONITORING)
+                    .pathMatchers("/favicon.ico")
+                    .permitAll()
+                    .pathMatchers("/habits/**")
+                    .hasRole(USER)
+                    .pathMatchers("/track/**")
+                    .hasRole(USER)
+                    .pathMatchers("/report/**")
+                    .hasRole(USER)
+                    .pathMatchers("/ui/overview")
+                    .hasRole(USER)
+                    .pathMatchers("/ui/**")
+                    .permitAll()
+                    .pathMatchers("/")
+                    .permitAll()
+                    .and());
   }
 
   @Bean
   public PasswordEncoder passwordEncoder() {
     return PasswordEncoderFactories.createDelegatingPasswordEncoder();
+  }
+
+  @Bean
+  public GrantedAuthoritiesMapper userAuthoritiesMapper() {
+    return (authorities) -> Set.of(new SimpleGrantedAuthority(String.format("ROLE_%s", USER)));
   }
 }
